...
                                <rect key="frame" x="48" y="93" width="384" height="201"/>
                                <subviews>
                                    <textField identifier="input" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="QM6-xP-GuL">
                                        <rect key="frame" x="0.0" y="180" width="384" height="21"/>
                                        <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" alignment="left" placeholderString="dog, lion, horse" drawsBackground="YES" id="xSd-ye-wvF">
...
                                        </textFieldCell>
                                    </textField>
                                    <progressIndicator identifier="loading_indicator" hidden="YES" maxValue="100" indeterminate="YES" controlSize="small" style="spinning" translatesAutoresizingMaskIntoConstraints="NO" id="vU1-Pd-mn8">
                                        <rect key="frame" x="0.0" y="185" width="16" height="16"/>
                                        <accessibility identifier="loading_indicator"/>
                                    </progressIndicator>
                                    <button identifier="submit" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="aRV-KT-ulC">
                                        <rect key="frame" x="153" y="129" width="77" height="32"/>
                                        <buttonCell key="cell" type="push" title="Submit" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="8M5-ie-SmC">
...
                                                <rect key="frame" x="0.0" y="0.0" width="45" height="112"/>
                                                <subviews>
                                                    <textField identifier="genus_info_label" horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="dZ2-l8-aT5">
                                                        <rect key="frame" x="4" y="96" width="43" height="16"/>
                                                        <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Genus" id="Azc-pZ-Uct">
...
                                                        <accessibility identifier="genus_info_label"/>
                                                    </textField>
                                                    <textField identifier="habitat_info_label" horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="QcH-Fj-rY6">
                                                        <rect key="frame" x="-2" y="64" width="49" height="16"/>
                                                        <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Habitat" id="fUv-T4-Iu8">
...
                                                        <accessibility identifier="habitat_info_label"/>
                                                    </textField>
                                                    <textField identifier="food_info_label" horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="2kD-4O-NwB">
                                                        <rect key="frame" x="12" y="32" width="35" height="16"/>
                                                        <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Food" id="AoE-tU-uct">
...
                                                        <accessibility identifier="food_info_label"/>
                                                    </textField>
                                                    <textField identifier="sound_info_label" horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="J8s-cy-K8B">
                                                        <rect key="frame" x="5" y="0.0" width="42" height="16"/>
                                                        <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="sound" id="v3y-at-Jh1">
...
                                                <rect key="frame" x="79" y="0.0" width="50" height="112"/>
                                                <subviews>
                                                    <textField identifier="genus_label" horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="HxR-gg-dBP">
                                                        <rect key="frame" x="-2" y="96" width="54" height="16"/>
                                                        <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" id="eMF-Vp-4XA">
...
                                                        <accessibility identifier="genus_label"/>
                                                    </textField>
                                                    <textField identifier="habitat_label" horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="6Nq-Rp-lHy">
                                                        <rect key="frame" x="-2" y="64" width="54" height="16"/>
                                                        <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" id="FGQ-yh-zQl">
...
                                                        <accessibility identifier="habitat_label"/>
                                                    </textField>
                                                    <textField identifier="food_label" horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="9tr-fR-1ad">
                                                        <rect key="frame" x="-2" y="32" width="54" height="16"/>
                                                        <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" id="OsO-QO-Z0J">
...
                                                        <accessibility identifier="food_label"/>
                                                    </textField>
                                                    <textField identifier="sound_label" horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="4u9-sV-52p">
                                                        <rect key="frame" x="-2" y="0.0" width="54" height="16"/>
                                                        <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" id="jGp-CL-yaF">
...
